--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -33,7 +33,7 @@
                 <h2 class="section-heading">Privacy Policy: BJ Sports (App)</h2> 
               <h4>1. PURPOSE OF THIS PRIVACY POLICY</h4>
               <p>
-                Run It Twice AB respects your privacy and is committed to protecting your personal data and processing it in compliance with applicable laws – notably:
+                1Marketing AB respects your privacy and is committed to protecting your personal data and processing it in compliance with applicable laws – notably:
               </p>
               <ul><li>The <b>Regulation (EU) 2016/679</b> of the European Parliament and of the Council of 27 April 2016 on the protection of natural persons with regard to the processing of Personal Data and on the free movement of such data, and repealing Directive 95/46/EC (<b>General Data Protection Regulation</b>) – the ‘<b>GDPR</b>’.</li></ul>
               <p>
@@ -42,13 +42,13 @@
 
               <h4>2. CONTROLLER</h4>
               <p>
-                Run It Twice AB is the controller and responsible for your personal data (referred to as "We", “we”, "us" or "our" in this Privacy Policy).
+                1Marketing AB is the controller and responsible for your personal data (referred to as "We", “we”, "us" or "our" in this Privacy Policy).
                 <br>
                 Although Our goal is to always be as clear and transparent as possible, if You need any clarification on this Privacy Policy or a specific legal basis We are relying on to process Your Personal Data for a specific processing operation, We would be happy to provide You with any such information You may need.
                 <br><br>
                 General email address:
                 <br>
-                info@runittwice.se
+                info@1marketing.se
                 <br><br>            
               </p>
 
@@ -93,11 +93,11 @@
             You, as a ‘data subject’ have a number of rights that are applicable under certain conditions and in certain circumstances, including Your:       
           </p>
           <ul>
-            <li><b>Right</b> to have <b>access</b> to your Personal Data processed by Run It Twice AB;</li>
-            <li><b>Right</b> to ask Run It Twice AB to <b>rectify</b> inaccurate Personal Data concerning you;</li>
+            <li><b>Right</b> to have <b>access</b> to your Personal Data processed by 1Marketing AB;</li>
+            <li><b>Right</b> to ask 1Marketing AB to <b>rectify</b> inaccurate Personal Data concerning you;</li>
             <li><b>Right</b> to <b>erase</b> your Personal Data (‘right to be forgotten’);</li>
             <li><b>Right</b> to <b>restrict</b> (that is, store but not further process) Your Personal Data;</li>
-            <li>Right to ask Run It Twice AB to provide Your Personal Data to You in a structured, commonly used, machine-readable format, or (where technically feasible) to have it 'ported' directly to another data controller (‘<b>right to data portability</b>’);</li>
+            <li>Right to ask 1Marketing AB to provide Your Personal Data to You in a structured, commonly used, machine-readable format, or (where technically feasible) to have it 'ported' directly to another data controller (‘<b>right to data portability</b>’);</li>
             <li><b>Right to object</b> to processing your Personal Data;</li>
             <li><b>Right to lodge a complaint</b> with the relevant supervisory authority.</li>
           </ul>
