--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -30,7 +30,7 @@
 <section>
   <div class="container text-block">
         <button onclick="window.location.href='index.html'">Back to home</button>   
-                <h2 class="section-heading">Privacy Policy: BJ Sports (App)</h2> 
+                <h2 class="section-heading">Privacy Policy APP</h2> 
               <h4>1. PURPOSE OF THIS PRIVACY POLICY</h4>
               <p>
                 1Marketing AB respects your privacy and is committed to protecting your personal data and processing it in compliance with applicable laws – notably:
