--- a/android/privacy-policy.html
+++ b/android/privacy-policy.html
@@ -48,7 +48,7 @@
                 <br><br>
                 General email address:
                 <br>
-                contact@huntingfordmetoden.se
+                huntingfordbondessons@gmail.com
                 <br><br>            
               </p>
 
